--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <!-- <div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-xs-6 col-sm-3 col-md-3 product-item">
           <div class="img">
@@ -61,10 +61,18 @@
       </div>
     </div>
     <div class="banner-index-head">
-		<a href="https://somehow.vn/collections/san-pham-moi">
-			<img class="lazyautosizes ls-is-cached lazyloaded" data-sizes="auto" data-src="//theme.hstatic.net/1000026602/1000983046/14/img-banner-index.jpg?v=399" data-lowsrc="//theme.hstatic.net/1000026602/1000983046/14/img-banner-index.jpg?v=399" src="//theme.hstatic.net/1000026602/1000983046/14/img-banner-index.jpg?v=399" alt="SẢN PHẨM MỚI - MEN" sizes="829px">
-		</a> -->
-    <!-- </div> -->
+      <a href="https://somehow.vn/collections/san-pham-moi">
+        <img
+          class="lazyautosizes ls-is-cached lazyloaded"
+          data-sizes="auto"
+          data-src="//theme.hstatic.net/1000026602/1000983046/14/img-banner-index.jpg?v=399"
+          data-lowsrc="//theme.hstatic.net/1000026602/1000983046/14/img-banner-index.jpg?v=399"
+          src="//theme.hstatic.net/1000026602/1000983046/14/img-banner-index.jpg?v=399"
+          alt="SẢN PHẨM MỚI - MEN"
+          sizes="829px"
+        />
+      </a>
+    </div>
     <div class="barsale text-center active-show">
       <div class="container-fluid">
         <p>
@@ -74,6 +82,5 @@
         </p>
       </div>
     </div>
-    
   </body>
 </html>
